--- a/docs/style.css
+++ b/docs/style.css
@@ -1,5 +1,5 @@
 body section section {
-background-color: LightBlue; /*BurlyWood;*//*#99ccff;*/
+background-color: LightBlue; #b3ecff /*BurlyWood;*//*#99ccff;*/
 
 color: indigo;
 font-family: arial, helvetica, sans-serif;
