--- a/docs/style.css
+++ b/docs/style.css
@@ -1,7 +1,7 @@
 body section section {
-background-color: PowderBlue; #b3ecff /*BurlyWood;*//*#99ccff;*/
+background-color: #007399 /*BurlyWood;*//*#99ccff;*/
 
-color: indigo;
+color: white;
 font-family: arial, helvetica, sans-serif;
 }
 
