--- a/docs/style.css
+++ b/docs/style.css
@@ -1,5 +1,5 @@
 body section section {
-background-color: #007399 /*BurlyWood;*//*#99ccff;*/
+background-color: #007399
 
 color: white;
 font-family: arial, helvetica, sans-serif;
