--- a/docs/style.css
+++ b/docs/style.css
@@ -1,7 +1,7 @@
 body section section {
-background-color: #007399
+background-color: LightBlue;
 
-;color: white;
+;color: indigo;
 font-family: arial, helvetica, sans-serif;
 }
 
