--- a/docs/style.css
+++ b/docs/style.css
@@ -1,5 +1,5 @@
 body section section {
-background-color: LightBlue;
+background-color: PowderBlue;
 
 ;color: indigo;
 font-family: arial, helvetica, sans-serif;
