--- a/docs/style.css
+++ b/docs/style.css
@@ -7,6 +7,10 @@ body section section {
 background-color: Lavender;
 }
 
+body section {
+background-color: Lavender;
+}
+
 figure{width:30%;}
 img.photo {max-width:500px;width:50% }
 
