Update text specs

--- a/docs/style.css
+++ b/docs/style.css
@@ -82,6 +82,7 @@ div.menuA {text-align: center; font-size: 3vw;}
  * em is also responsive: it is the width of the standard letter M in your font usually 16 px. 
  *  */
  
+h2 {text-align: center;}
   
   
   
