--- a/docs/style.css
+++ b/docs/style.css
@@ -60,6 +60,11 @@ img.photo {max-width:500px;width:50%;
   margin-left: auto;
   margin-right: auto;}
   
+img.photogal {max-width:500px;width:50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;}
+  
 
 
 .compare {
