--- a/docs/style.css
+++ b/docs/style.css
@@ -4,6 +4,15 @@ font-size: 14pt;}
 
 /* body section {background-image: linear-gradient(purple, orange);}*/
 
+.birdleft {max-width:100px;width:50%;
+  display: inline-grid;
+  margin-left: 1%;
+  margin-right: auto;}
+  
+.birdright {max-width:100px;width:50%;
+  display: inline-grid;
+  margin-left: auto;
+  margin-right: 1%;}
 
 /* unvisited link */
 a:link {
@@ -107,7 +116,29 @@ div.newspaper
   margin: 10px;
 }
 
-div.menuA {text-align: center; font-size: 2vw;}
+div.storyboard
+ {
+  column-count: 2;
+  column-gap: 5px;
+  column-rule-style: solid;
+  column-rule: 1px double;
+  margin: 5px;}
+
+div.menuA {text-align: center; font-size: 2vw;
+  border: 30px solid transparent;
+  padding: 35px;
+  border-image-source: url(aesthetic/boarder.png);
+  border-image-repeat: repeat;
+  border-image-slice: 110;}
+  
+.birdright {float: right;
+max-width:90px;width:25%;
+  margin-right: 10px}
+  
+.birdleft {float: left;
+max-width:90px;width:25%;
+  margin-left: 10px}
+  
 /*  Units to try: em and vw. vw means a percentage of the viewport width 
  * and is often used in responsive web design (responsive to size of device screens)
  * em is also responsive: it is the width of the standard letter M in your font usually 16 px. 
@@ -118,7 +149,7 @@ h1 {text-align: center;}
 h2 {text-align: center;}
 
 .seg {
-  background-color: #CCFFFF; 
+  background-color: lavender; 
   list-style-type: none;
   text-align: center;
   margin: 0;
