--- a/docs/style.css
+++ b/docs/style.css
@@ -125,20 +125,21 @@ div.storyboard
   margin: 5px;}
 
 div.menuA {text-align: center; font-size: 2vw;
+  display: block;
   border: 30px solid transparent;
-  padding: 35px;
+  padding: 25px;
   border-image-source: url(aesthetic/boarder.png);
   border-image-repeat: repeat;
   border-image-slice: 110;}
   
 .birdright {float: right;
 display: inline;
-max-width:90px;width:25%;
+max-width:75px;width:25%;
   margin-right: 5px}
   
 .birdleft {float: left;
 display: inline;
-max-width:90px;width:25%;
+max-width:75px;width:25%;
   margin-left: 5px}
   
 .birdie  { content: "";
