--- a/docs/style.css
+++ b/docs/style.css
@@ -62,13 +62,7 @@ img.photogal {max-width:500px;width:50%;
   
 
 
-.gamepic
-  {box-sizing: border-box;
-  width: 30%; /* three boxes (use 25% for four, and 50% for two, etc) */
-  padding: 45px; /* if you want space between the images */
-  display: flex;
-  flex: 20%;}
-  
+
 
 .compare {
   box-sizing: border-box;
@@ -122,6 +116,32 @@ div.storyboard
 #menu
 {display: flex;
 flex-direction: row-reverse;}
+
+.gamepic
+{display: flex;
+align-content: center;
+flex-direction:row;
+justify-content: center;
+flex-wrap: wrap;
+flex-basis: auto;}
+
+
+ /* {box-sizing: border-box;
+  width: 30%; /\* three boxes (use 25% for four, and 50% for two, etc) *\/
+  padding: 45px; /\* if you want space between the images *\/
+  display: flex;
+  flex: 20%;}
+  */
+  
+  
+  
+.gp
+{max-width:350px;width:50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 8px;}
+
 
 .birdframe
 {flex: 1;}
