fix h3 for Posts

--- a/docs/style.css
+++ b/docs/style.css
@@ -165,6 +165,8 @@ h1 {text-align: center;}
  
 h2 {text-align: center;}
 
+h3 {text-align: center;}
+
 .seg {
   background-color: lavender; 
   list-style-type: none;
