--- a/docs/style.css
+++ b/docs/style.css
@@ -52,6 +52,7 @@ figcaption {font-style: italic; font-size: smaller}
 
 img.photo {max-width:500px;width:50%;
   display: block;
+  padding: 50px;
   margin-left: auto;
   margin-right: auto;}
   
