--- a/docs/style.css
+++ b/docs/style.css
@@ -117,6 +117,7 @@ flex-direction: row-reverse;}
 
 .gamepic
 {display: flex;
+margin-top: 30px;
 align-content: center;
 flex-direction:row;
 justify-content: center;
